--- a/euphoniae/package.json
+++ b/euphoniae/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "aws-amplify": "^0.4.1",
+    "node-sass": "^4.9.0",
     "node-sass-chokidar": "^1.3.0",
     "npm-run-all": "^4.1.3",
     "react": "^16.3.2",
@@ -11,7 +12,8 @@
     "react-dom": "^16.3.2",
     "react-router-bootstrap": "^0.24.4",
     "react-router-dom": "^4.2.2",
-    "react-scripts": "1.1.4"
+    "react-scripts": "1.1.4",
+    "sass-loader": "^7.0.1"
   },
   "scripts": {
     "build-css": "node-sass-chokidar src/scss/ -o src/css/",
