--- a/euphoniae/package.json
+++ b/euphoniae/package.json
@@ -9,6 +9,7 @@
     "npm-run-all": "^4.1.3",
     "react": "^16.3.2",
     "react-bootstrap": "^0.32.1",
+    "react-countup": "^3.0.3",
     "react-dom": "^16.3.2",
     "react-router-bootstrap": "^0.24.4",
     "react-router-dom": "^4.2.2",
